[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
description = "A common framework to analyse scNMT-seq data."
dynamic = ["version"]
name = "linkapy"
authors = [
    {name = "Ward Deboutte", email = "w@rddeboutte.com"},
]
requires-python = ">= 3.10, < 3.13"
dependencies = [
    "anndata == 0.11.1",
    "scanpy == 1.10.4",
    "scvi-tools == 1.2.0"
]
[project.scripts]
lp = "linkapy.main:main"