[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
description = "A common framework to analyse scNMT-seq data."
dynamic = ["version"]
name = "linkapy"
authors = [
    {name = "Ward Deboutte", email = "w@rddeboutte.com"},
]
requires-python = ">= 3.10, < 3.13"
dependencies = [
    "anndata == 0.11.1",
    "scanpy == 1.10.4",
    "scvi-tools == 1.2.0",
    "celltypist == 1.6.3",
    "moscot == 0.3.5",
    "rich == 13.9.4",
    "pyarrow == 18.1.0",
    "muon == 0.1.7",
    "tables == 3.10.1",
    "polars == 1.17.1"
]
[project.scripts]
lp = "linkapy.main:main"
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]
build = [
    "build"
]